# newsbridge

./: .env.prod  README.md  docker-compose.dev.yaml
client/src/: SignUp.js
llm/: Dockerfile
llm/src/: llm_classes.py  llm_server.py
server/: Dockerfile  pyproject.toml
server/src/: llm.py  server.py
